log
Thu Mar 19 07:10:15 PM UTC 2026: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:14: error: expected expression before ‘List’
   56 |    while(top(List *L) != NULL){
      |              ^~~~
exercises.c:57:19: error: expected expression before ‘List’
   57 |       cont += top(List *L);
      |                   ^~~~
exercises.c:58:11: error: expected expression before ‘List’
   58 |       pop(List *L);
      |           ^~~~
4eddaa4
